--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <main>
         <section class="hero">
             <div class="container">
-                <h1>キノピオの世界へようこそ！</h1>
-                <p>キノコ王国の愉快な仲間たちと、笑顔あふれる大冒険に出かけよう！</p>
+                <h1>ノコノコの世界へようこそ！</h1>
+                <p>クッパ王国の愉快な仲間たちと、笑顔あふれる大冒険に出かけよう！</p>
             </div>
         </section>
 
